minor update on tutorial markdowns as in array-ephys

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -11,29 +11,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Open-source Data Pipeline for Markerless Pose Estimation in Neurophysiology**\n"
+    "#### **Open-source Data Pipeline for Markerless Pose Estimation in Neurophysiology**\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "This tutorial aims to provide a comprehensive understanding of the open-source data pipeline by `Element-DeepLabCut`."
+    "Welcome to the tutorial for the DataJoint Element for pose estimation analysis. This tutorial aims to provide a comprehensive understanding of the open-source data pipeline by `element-deeplabcut`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pipeline](../images/flowchart.svg)"
+    "![pipeline](../images/diagram_flowchart.svg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The package is designed to integrate the **model training** and **pose estimation analyses** into a data pipeline and streamline model and video management using DataJoint. "
+    "The package is designed to seamlessly integrate the **model training** and **pose estimation analyses** into a data pipeline and streamline model and video management using DataJoint. "
    ]
   },
   {
@@ -54,7 +53,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Key Components and Objectives**\n"
+    "### Prerequisites\n",
+    "\n",
+    "Please see the [datajoint tutorials GitHub\n",
+    "repository](https://github.com/datajoint/datajoint-tutorials/tree/main) before\n",
+    "proceeding.\n",
+    "\n",
+    "A basic understanding of the following DataJoint concepts will be beneficial to your\n",
+    "understanding of this tutorial: \n",
+    "1. The `Imported` and `Computed` tables types in `datajoint-python`.\n",
+    "2. The functionality of the `.populate()` method. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Tutorial Overview**"
    ]
   },
   {
@@ -62,17 +77,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "**- Setup**\n",
-    "\n",
-    "**- Designing the DataJoint Pipeline**\n",
-    "\n",
-    "**- Step 1: Register an Existing Model in the DataJoint Pipeline**\n",
-    "\n",
-    "**- Step 2: Insert Example Data into Subject and Session tables**\n",
-    "\n",
-    "**- Step 3: Run the DeepLabCut Inference Task**\n",
-    "\n",
-    "**- Step 4: Visualize the Results**"
+    "+ Setup\n",
+    "+ *Activate* the DataJoint pipeline\n",
+    "+ *Register* an existing model in the DataJoint pipeline\n",
+    "+ *Insert* example data into subject and session tables\n",
+    "+ Run the inference task\n",
+    "+ Visualize the results"
    ]
   },
   {
@@ -86,13 +96,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial examines the **behavior of a freely moving mouse** in an open-field environment.\n",
+    "This tutorial examines the behavior of a freely moving mouse in an open-field environment. The goal is to extract pose estimations of the animal's head and tail base from video footage. The resulting x and y coordinates offer valuable insights into the animal's movements, postures, and interactions within the environment. \n",
     "\n",
-    "The goal is to extract pose estimations of the animal's **head and tail base** from video footage. \n",
-    "\n",
-    "The **resulting x and y coordinates** offer valuable insights into the **animal's movements, postures, and interactions** within the environment. \n",
-    "\n",
-    "The results of this Element example can be **combined with other modalities** to create a complete customizable data pipeline for your specific lab or study. For instance, you can combine `element-deeplabcut` with `element-calcium-imaging` and `element-array-ephys` to characterize the neural activity.\n",
+    "The results of this Element example can be combined with **other modalities** to create a complete customizable data pipeline for your specific lab or study. For instance, you can combine `element-deeplabcut` with `element-calcium-imaging` and `element-array-ephys` to characterize the neural activity along with markless pose estimation during behavior.\n",
     "\n",
     "#### Steps to Run the Element-DeepLabCut\n",
     "\n",
@@ -143,7 +149,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This codespace provides a local database private to you for experimentation. Let's connect to the database server:"
+    "If the tutorial is run in Codespaces, a private, local database server is created and\n",
+    "made available for you. This is where we will insert and store our processed results.\n",
+    "Let's connect to the database server."
    ]
   },
   {
@@ -178,14 +186,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Design the DataJoint Pipeline**"
+    "### **Activate the DataJoint pipeline**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial presumes that the `element-deeplabcut` has been pre-configured and instantiated, with the database linked downstream to pre-existing `subject` and `session` tables. \n",
+    "This tutorial presumes that the `element-deeplabcut` has been pre-configured and instantiated, with the database linked downstream to pre-existing `subject` and `session` tables. Please refer to the\n",
+    "[`tutorial_pipeline.py`](./tutorial_pipeline.py) for the source code.\n",
     "\n",
     "Now, we will proceed to import the essential schemas required to construct this data pipeline, with particular attention to the primary components: `train` and `model`."
    ]
@@ -211,12 +220,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can represent a diagram of some of the upstream and downstream dependencies connected to these `model` and `train` schemas:"
+    "We can represent the tables in the `model` and `train` schemas as well as some of the upstream dependencies to `session` and `subject` schemas as a diagram."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1003,6 @@
    "source": [
     "(\n",
     "    dj.Diagram(subject)\n",
-    "    + dj.Diagram(lab)\n",
     "    + dj.Diagram(session)\n",
     "    + dj.Diagram(model)\n",
     "    + dj.Diagram(train)\n",
@@ -1005,9 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As evident, this data pipeline is fairly comprehensive, encompassing several tables associated with different DeepLabCut components like model, train, and evaluation. A few tables, such as `Subject` or `Lab`, while integral to the pipeline, fall outside the scope of the scope of element-deeplabcut tutorial as they are upstream. \n",
-    "\n",
-    "Our focus in this tutorial will be primarily on the two core schemas:"
+    "As evident from the diagram, this data pipeline encompasses several tables associated with different pose estimation components like model, train, and evaluation. A few tables, such as `subject.Subject` or `session.Session`, while important for a complete pipeline, fall outside the scope of the `element-deeplabcut` tutorial, and will therefore, not be explored extensively here. The primary focus of this tutorial will be on the `train` and `model` schemas."
    ]
   },
   {
@@ -1252,14 +1258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This diagram represents an example of the `element-deeplabcut` pipeline."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Step 1 - Register an Existing Model in the DataJoint Pipeline**"
+    "### **Register an existing model in the DataJoint pipeline**"
    ]
   },
   {
@@ -1527,14 +1526,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Step 2 - Insert Subject, Session, and Behavior Videos**"
+    "### **Insert example data into subject and session tables**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's delve into the `Subject` and `Session` tables and include some example data."
+    "Now, let's delve into the `subject.Subject` and `session.Session` tables and include some example data."
    ]
   },
   {
@@ -1971,7 +1970,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Step 3 - DeepLabCut Inference Task**"
+    "### **Run the inference task**"
    ]
   },
   {
@@ -2870,7 +2869,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Step 4 - Visualization of results**"
+    "### **Visualize the results**"
    ]
   },
   {
@@ -3023,12 +3022,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Following this tutorial, we've efficiently:\n",
-    "- covered the essential functionality of `element-deeplabcut`\n",
-    "- acquired the skills to integrate an existing DLC model into the pipeline\n",
-    "- insert data into tables\n",
-    "- execute the pose estimation procedure\n",
-    "- visualize the outcomes"
+    "Following this tutorial, we have:\n",
+    "+ Covered the essential functionality of `element-deeplabcut`\n",
+    "+ Acquired the skills to integrate an existing DeepLabCut model into the pipeline\n",
+    "+ Learned how to manually insert data into tables\n",
+    "+ Executed and ingested results of the pose estimation analysis with DeepLabCut\n",
+    "+ Visualized the results"
    ]
   },
   {
@@ -3042,20 +3041,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For detailed documentation on `element-deeplabcut`:\n",
-    "\n",
-    "[`DataJoint Element for DeepLabCut - Documentation`](https://datajoint.com/docs/elements/element-deeplabcut/0.2/)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For detailed documentation and tutorials on general DataJoint principles that support collaboration, automation, reproducibility, and visualizations:\n",
-    "\n",
-    "[`DataJoint for Python - Interactive Tutorials`](https://github.com/datajoint/datajoint-tutorials) covers fundamentals, including table tiers, query operations, fetch operations, automated computations with the make function, and more.\n",
-    "\n",
-    "[`DataJoint for Python - Documentation`](https://datajoint.com/docs/core/datajoint-python/0.14/)"
+    "+ Detailed [documentation on `element-deeplabcut`](https://datajoint.com/docs/elements/element-deeplabcut/0.2/)\n",
+    "+  [General `DataJoint-Python` interactive tutorials](https://github.com/datajoint/datajoint-tutorials), covering fundamentals, such as table tiers, query operations, fetch operations, automated computations with the make function, and more.\n",
+    "+ [Documentation for `DataJoint-Python`](https://datajoint.com/docs/core/datajoint-python/0.14/)"
    ]
   }
  ],
