fix `input_dir` and `output_dir` in the tutorial

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -249,7 +249,7 @@
    "outputs": [],
    "source": [
     "config_file_rel = (\n",
-    "    \"./example_data/inbox/from_top_tracking-DataJoint-2023-10-11/config.yaml\"\n",
+    "    \"from_top_tracking-DataJoint-2023-10-11/config.yaml\"\n",
     ")"
    ]
   },
@@ -545,7 +545,7 @@
     "    {\n",
     "        **task_key,\n",
     "        \"task_mode\": \"load\",\n",
-    "        \"pose_estimation_output_dir\": \"./example_data/outbox/from_top_tracking-DataJoint-2023-10-11/videos/device_1_recording_1_model_from_top_tracking_100000_maxiters\",\n",
+    "        \"pose_estimation_output_dir\": \"from_top_tracking-DataJoint-2023-10-11/videos/device_1_recording_1_model_from_top_tracking_100000_maxiters\",\n",
     "    }\n",
     ")"
    ]
