black formatting `tutorial.ipynb`

--- a/notebooks/tutorial.ipynb
+++ b/notebooks/tutorial.ipynb
@@ -785,12 +785,7 @@
     }
    ],
    "source": [
-    "(\n",
-    "    dj.Diagram(subject)\n",
-    "    + dj.Diagram(session)\n",
-    "    + dj.Diagram(model)\n",
-    "    + dj.Diagram(train)\n",
-    ")"
+    "(dj.Diagram(subject) + dj.Diagram(session) + dj.Diagram(model) + dj.Diagram(train))"
    ]
   },
   {
@@ -1060,9 +1055,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_file_rel = (\n",
-    "    \"from_top_tracking-DataJoint-2023-10-11/config.yaml\"\n",
-    ")"
+    "config_file_rel = \"from_top_tracking-DataJoint-2023-10-11/config.yaml\""
    ]
   },
   {
